--- a/l3experimental/l3str/l3str-format.dtx
+++ b/l3experimental/l3str/l3str-format.dtx
@@ -127,7 +127,7 @@
 %   \end{syntax}
 %   Evaluates the \meta{floating point expression} and converts the
 %   result to a string according to the \meta{format specification}.
-%   The \meta{precision} defaults to $6$.  The \meta{style} can be
+%   The \meta{style} can be
 %   \begin{itemize}
 %     \item |e| for scientific notation, with one digit before and
 %       \meta{precision} digits after the decimal separator, and an
@@ -138,6 +138,9 @@
 %       in the range $[10^{-4}, 10^{\meta{precision}})$ and style |e|
 %       otherwise.
 %   \end{itemize}
+%   When there is no \meta{style} specifier nor \meta{precision} the
+%   number is displayed without rounding.  Otherwise the
+%   \meta{precision} defaults to~$6$.
 % \end{function}
 %
 % \section{Possibilities, and things to do}
@@ -732,8 +735,9 @@
 %   (default), put nothing, represented as a brace group.  The width
 %   |#4| will be useful later, store it after \cs{s_stop}.  Afterwards,
 %   check the \meta{precision}: if it was not given, replace it by $6$
-%   (default precision).  Finally, dispatch depending on the
-%   \meta{style}.
+%   (default precision) unless no \meta{style} was given: in that case
+%   we want to use whatever precision is needed to fully describe the
+%   number.  Finally, dispatch depending on the \meta{style}.
 %    \begin{macrocode}
 \cs_new:Npn \@@_format_fp:NNNnnNw
     #1#2#3#4#5#6 \s__fp \__fp_chk:w #7 #8
@@ -753,7 +757,11 @@
       }
     \@@_format_put:nw { {#4} }
     \tl_if_empty:nTF {#5}
-      { \@@_format_put:nw { { 6} } }
+      {
+        \token_if_eq_meaning:NNTF #6 ?
+          { \@@_format_put:nw { {  } } }
+          { \@@_format_put:nw { { 6} } }
+      }
       { \@@_format_put:nw { {#5} } }
     \str_case:nnF {#6}
       {
@@ -879,7 +887,9 @@
 % \begin{macro}[EXP]{\@@_format_fp_g:wn}
 % \begin{macro}[EXP]{\@@_format_fp_g_aux:wn}
 % \begin{macro}[EXP]{\@@_format_fp_to_scientific:n, \@@_format_fp_trim:w}
-%   With the |g| type, first filter out special cases.  In the normal
+%   With the |g| type, first filter out special cases and the case where
+%   neither style nor precision were given (then one should not round).
+%   In the normal
 %   case, round to |#4| significant figures, then test the exponent: if
 %   $-4\leq \meta{exponent} < \meta{precision}$, use the presentation
 %   type |f|, otherwise use the presentation type |e|.  Also, a
@@ -898,12 +908,16 @@
         {3} { nan }
       }
       {
-        \exp_last_unbraced:Nf \@@_format_fp_g_aux:wn
+        \tl_if_empty:nTF {#3}
+          { \fp_to_tl:n { abs ( \s__fp \__fp_chk:w #1#2 ; ) } }
           {
-            \@@_format_fp_round:wn \s__fp \__fp_chk:w #1#2 ;
+            \exp_last_unbraced:Nf \@@_format_fp_g_aux:wn
+              {
+                \@@_format_fp_round:wn \s__fp \__fp_chk:w #1#2 ;
+                  { \int_max:nn {1} {#3} }
+              }
               { \int_max:nn {1} {#3} }
           }
-          { \int_max:nn {1} {#3} }
       }
   }
 \cs_new:Npn \@@_format_fp_g_aux:wn #1; #2
