--- a/l3kernel/l3text-case.dtx
+++ b/l3kernel/l3text-case.dtx
@@ -199,7 +199,7 @@
   {
     \group_align_safe_begin:
     \@@_change_case_loop:nnw {#2} {#3} #1
-      \q_recursion_tail \q_recursion_stop
+      \q_@@_recursion_tail \q_@@_recursion_stop
     \@@_change_case_result:n { }
   }
 %    \end{macrocode}
@@ -219,7 +219,7 @@
 %    \end{macrocode}
 %   The main loop is the standard \texttt{tl action} type.
 %    \begin{macrocode}
-\cs_new:Npn \@@_change_case_loop:nnw #1#2#3 \q_recursion_stop
+\cs_new:Npn \@@_change_case_loop:nnw #1#2#3 \q_@@_recursion_stop
   {
     \tl_if_head_is_N_type:nTF {#3}
       { \@@_change_case_N_type:nnN }
@@ -228,9 +228,9 @@
           { \use:c { @@_change_case_group_ #1 :nnn } }
           { \@@_change_case_space:nnw }
       }
-    {#1} {#2} #3 \q_recursion_stop
+    {#1} {#2} #3 \q_@@_recursion_stop
   }
-\cs_new:Npn \@@_change_case_break:w #1 \q_recursion_tail \q_recursion_stop
+\cs_new:Npn \@@_change_case_break:w #1 \q_@@_recursion_tail \q_@@_recursion_stop
   {
     \@@_change_case_store:n {#1}
     \@@_change_case_end:w
@@ -301,7 +301,7 @@
 %    \begin{macrocode}
 \cs_new:Npn \@@_change_case_N_type:nnN #1#2#3
   {
-    \quark_if_recursion_tail_stop_do:Nn #3
+    \@@_if_recursion_tail_stop_do:Nn #3
       { \@@_change_case_end:w }
     \@@_change_case_N_type_aux:nnN {#1} {#2} #3
   }
@@ -313,16 +313,16 @@
 \cs_new:Npn \@@_change_case_N_type:nnnN #1#2#3#4
   {
     \@@_change_case_math_search:nnNNN {#2} {#3} #4 #1
-      \q_recursion_tail \q_recursion_tail
-      \q_recursion_stop
+      \q_@@_recursion_tail \q_@@_recursion_tail
+      \q_@@_recursion_stop
   }
 \cs_new:Npn \@@_change_case_math_search:nnNNN #1#2#3#4#5
   {
-    \quark_if_recursion_tail_stop_do:Nn #4
+    \@@_if_recursion_tail_stop_do:Nn #4
       { \@@_change_case_cs_check:nnN {#1} {#2} #3 }
     \token_if_eq_meaning:NNTF #3 #4
       {
-        \use_i_delimit_by_q_recursion_stop:nw
+        \@@_use_i_delimit_by_q_recursion_stop:nw
            {
              \@@_change_case_store:n {#3}
              \@@_change_case_math_loop:nnNw {#1} {#2} #5
@@ -330,7 +330,7 @@
       }
       { \@@_change_case_math_search:nnNNN {#1} {#2} #3 }
   }
-\cs_new:Npn \@@_change_case_math_loop:nnNw #1#2#3#4 \q_recursion_stop
+\cs_new:Npn \@@_change_case_math_loop:nnNw #1#2#3#4 \q_@@_recursion_stop
   {
     \tl_if_head_is_N_type:nTF {#4}
       { \@@_change_case_math_N_type:nnNN }
@@ -339,11 +339,11 @@
           { \@@_change_case_math_group:nnNn }
           { \@@_change_case_math_space:nnNw }
       }
-    {#1} {#2} #3 #4 \q_recursion_stop
+    {#1} {#2} #3 #4 \q_@@_recursion_stop
   }
 \cs_new:Npn \@@_change_case_math_N_type:nnNN #1#2#3#4
   {
-    \quark_if_recursion_tail_stop_do:Nn #4
+    \@@_if_recursion_tail_stop_do:Nn #4
       { \@@_change_case_end:w }
     \@@_change_case_store:n {#4}
     \token_if_eq_meaning:NNTF #4 #3
@@ -394,15 +394,15 @@
 \cs_new:Npn \@@_change_case_exclude:nnnN #1#2#3#4
   {
     \@@_change_case_exclude:nnNN {#2} {#3} #4 #1 
-      \q_recursion_tail \q_recursion_stop
+      \q_@@_recursion_tail \q_@@_recursion_stop
   }
 \cs_new:Npn \@@_change_case_exclude:nnNN #1#2#3#4
   {
-    \quark_if_recursion_tail_stop_do:Nn #4
+    \@@_if_recursion_tail_stop_do:Nn #4
       { \use:c { @@_change_case_letterlike_ #1 :nnN } {#1} {#2} #3 }
     \cs_if_eq:NNTF #3 #4
       {
-        \use_i_delimit_by_q_recursion_stop:nw
+        \@@_use_i_delimit_by_q_recursion_stop:nw
           { \@@_change_case_exclude:nnNn {#1} {#2} #3 }
       }
       { \@@_change_case_exclude:nnNN {#1} {#2} #3 }
@@ -487,7 +487,7 @@
           { \@@_change_case_lower_sigma:nnNw {#2} {#3} #4 }
           { \@@_change_case_char:nnnN {#1} {#2} {#3} #4 }
       }
-    \cs_new:Npn \@@_change_case_lower_sigma:nnNw #1#2#3#4 \q_recursion_stop
+    \cs_new:Npn \@@_change_case_lower_sigma:nnNw #1#2#3#4 \q_@@_recursion_stop
       {
         \tl_if_head_is_N_type:nTF {#4}
           { \@@_change_case_lower_sigma:NnnN #3 }
@@ -496,7 +496,7 @@
               { \char_generate:nn { "03C2 } { \@@_char_catcode:N #3 } }
             \@@_change_case_loop:nnw
           }
-            {#1} {#2} #4 \q_recursion_stop
+            {#1} {#2} #4 \q_@@_recursion_stop
       }
     \cs_new:Npn \@@_change_case_lower_sigma:NnnN #1#2#3#4
       {
@@ -729,12 +729,12 @@
         \@@_change_case_upper_el_loop:nnw {#2} {#3}
       }
     \cs_new:Npn \@@_change_case_upper_el_loop:nnw
-      #1#2#3 \q_recursion_stop
+      #1#2#3 \q_@@_recursion_stop
       {
         \tl_if_head_is_N_type:nTF {#3}
           { \@@_change_case_upper_el:nnN }
           { \@@_change_case_loop:nnw }
-            {#1} {#2} #3 \q_recursion_stop
+            {#1} {#2} #3 \q_@@_recursion_stop
       }
 %    \end{macrocode}
 %   In addition to the Greek accents, we list three cases here where an
@@ -903,12 +903,12 @@
             \@@_change_case_lower_lt:nnw {#2} {#3}
           }
       }
-    \cs_new:Npn \@@_change_case_lower_lt:nnw #1#2#3 \q_recursion_stop
+    \cs_new:Npn \@@_change_case_lower_lt:nnw #1#2#3 \q_@@_recursion_stop
       {
         \tl_if_head_is_N_type:nTF {#3}
           { \@@_change_case_lower_lt:nnN }
           { \@@_change_case_loop:nnw }
-           {#1} {#2} #3 \q_recursion_stop
+           {#1} {#2} #3 \q_@@_recursion_stop
       }
     \cs_new:Npn \@@_change_case_lower_lt:nnN #1#2#3
       {
@@ -970,12 +970,12 @@
            \@@_change_case_upper_lt:nnw {#2} {#3}
          }
      }
-    \cs_new:Npn \@@_change_case_upper_lt:nnw #1#2#3 \q_recursion_stop
+    \cs_new:Npn \@@_change_case_upper_lt:nnw #1#2#3 \q_@@_recursion_stop
       {
         \tl_if_head_is_N_type:nTF {#3}
           { \@@_change_case_upper_lt:nnN }
           { \use:c { @@_change_case_char_next_ #1 :nn } }
-            {#1} {#2} #3 \q_recursion_stop
+            {#1} {#2} #3 \q_@@_recursion_stop
       }
     \cs_new:Npn \@@_change_case_upper_lt:nnN #1#2#3
       {
@@ -1010,12 +1010,12 @@
       }
       { \@@_change_case_char:nnnN {#1} {#2} {#3} #4 }
   }
-\cs_new:Npn \@@_change_case_title_nl:nnw #1#2#3 \q_recursion_stop
+\cs_new:Npn \@@_change_case_title_nl:nnw #1#2#3 \q_@@_recursion_stop
   {
     \tl_if_head_is_N_type:nTF {#3}
       { \@@_change_case_title_nl:nnN }
       { \use:c { @@_change_case_char_next_ #1 :nn } }
-        {#1} {#2} #3 \q_recursion_stop
+        {#1} {#2} #3 \q_@@_recursion_stop
   }
 \cs_new:Npn \@@_change_case_title_nl:nnN #1#2#3
   {
@@ -1071,7 +1071,7 @@
 %   combination is found both the dotless-I and the dot-above char have to
 %   be removed from the input.
 %    \begin{macrocode}
-    \cs_new:Npn \@@_change_case_lower_tr:nnNw #1#2#3#4 \q_recursion_stop
+    \cs_new:Npn \@@_change_case_lower_tr:nnNw #1#2#3#4 \q_@@_recursion_stop
       {
         \tl_if_head_is_N_type:nTF {#4}
           { \@@_change_case_lower_tr:NnnN #3 }
@@ -1080,7 +1080,7 @@
               { \char_generate:nn { "0131 } { \@@_char_catcode:N #3 } }
             \@@_change_case_loop:nnw
           }
-            {#1} {#2} #4 \q_recursion_stop
+            {#1} {#2} #4 \q_@@_recursion_stop
       }
     \cs_new:Npn \@@_change_case_lower_tr:NnnN #1#2#3#4
       {
